Fix: change the color and add a smooth bottom line for better contrast

--- a/src/components/Globals/Navigation/Navigation.module.css
+++ b/src/components/Globals/Navigation/Navigation.module.css
@@ -15,7 +15,8 @@
   margin-block: 0rem;
   width: 100%;
   animation: stickyNav linear forwards;
-  background-color: #a3ffc213;
+  background-color: #e3fcfb59;
+  border-bottom: 1px solid #d1f2ff;
   backdrop-filter: blur(10px);
 
   .menu {
